# mjx-convert

./: .gitignore  pyproject.toml
converter/: hand.py  main.py  mjlog_decoder.py  mjscore_encoder.py  open_converter.py  open_tile_ids_converter.py
