[tool.poetry]
name = "mjx-convert"
version = "0.1.0"
description = ""
authors = ["Hiromu Nakamura <hiromu-nakamura@m3.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
tenhou-wall-reproducer = "^1.2.0"
google = "^3.0.0"
protobuf = "3.20.2"
grpcio = "^1.59.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
